# MyHouse24

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  dump.rdb  makefile  nginx.conf  pyproject.toml  requirements.txt
config/: api.py  celery.py  settings.py  urls.py
src/admin/: api.py  apps.py  choices.py  forms.py  middleware.py  models.py  schemas.py  tasks.py  urls.py  views.py
src/admin/migrations/: 0001_initial.py  0002_rename_sector_section_house_owner_and_more.py  0003_bankbook_flat.py  0004_alter_bankbook_number.py  0005_rename_flat_apartment_bankbook_apartment.py  0006_alter_bankbook_status.py  0007_alter_bankbook_status.py  0008_remove_bankbook_owner_remove_bankbook_tariff_and_more.py  0009_remove_bankbook_floor.py  0010_alter_apartment_section.py  0011_alter_apartment_owner_alter_apartment_section.py  0012_counter.py  0013_counter_readings.py  0014_alter_apartment_floor_alter_apartment_owner_and_more.py  0015_alter_bankbook_apartment.py  0016_rename_created_at_counter_date.py  0017_alter_counter_date.py  0018_alter_apartment_area_alter_house_address_and_more.py  0019_alter_apartment_tariff_alter_counter_house_and_more.py  0020_alter_mastercall_description.py  0021_alter_mastercall_master_type.py  0022_alter_mastercall_master_type.py  0023_alter_mastercall_call_status.py  0024_receipt.py  0025_receipt_is_catch.py  0026_servicefullcost_alter_receipt_service.py  0027_rename_service_cost_servicefullcost_service_and_more.py  0028_rename_consumption_servicefullcost_consumption.py  0029_remove_receipt_service_servicefullcost_receipt.py  0030_servicefullcost_unit_alter_receipt_status.py  0031_message_messagestatus.py  0032_message_apartment_message_floor_message_house_and_more.py  0033_message_for_debtor.py  0034_remove_message_apartment_remove_message_floor_and_more.py  0035_messagestatus_is_deleted.py  0036_message_sender.py  0037_message_apartment_message_floor_message_house_and_more.py  0038_xlstemplate.py  0039_cashbox.py  0040_cashbox_is_catch_cashbox_receipt_alter_cashbox_owner.py  (+15 more)
src/admin/templates/: admin_error.html  bankbook.html  bankbook_detail.html  bankbooks.html  cashbox_coming_add.html  cashbox_detail.html  cashbox_list.html  cashbox_outgo_add.html  counter.html  (+25 more)
src/managements/: apps.py  forms.py  models.py  urls.py  views.py
src/owner/: api.py  apps.py  forms.py  middleware.py  urls.py  views.py
src/settings/: api.py  apps.py  choices.py  forms.py  models.py  schemas.py  urls.py  views.py
src/user/: apps.py  backend.py  backends.py  choices.py  forms.py  models.py  permission  tasks.py  urls.py  utils.py  views.py
static/pages/: widgets.html
(+1174 files in other folders)
