[project]
name = "myhousecrm"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "django (>=6.0,<7.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "django-phonenumber-field (>=8.4.0,<9.0.0)",
    "phonenumbers (>=9.0.21,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
