[project]
name = "myhousecrm"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "pre-commit (>=4.5.1,<5.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "django-phonenumber-field (>=8.4.0,<9.0.0)",
    "phonenumbers (>=9.0.21,<10.0.0)",
    "django-hcaptcha-field (>=1.4.0,<2.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "django-ckeditor (>=6.7.3,<7.0.0)",
    "djlint (>=1.36.4,<2.0.0)",
    "django-ninja (>=1.5.1,<2.0.0)",
    "django-anymail[brevo] (>=14.0,<15.0)",
    "django-ajax-datatable (>=4.5.0,<5.0.0)",
    "django (==5.1.4)",
    "django-select2 (>=8.4.8,<9.0.0)",
    "celery (>=5.6.2,<6.0.0)",
    "django-redis (>=6.0.0,<7.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "weasyprint (>=68.0,<69.0)",
    "django-hijack (>=3.7.6,<4.0.0)",
    "redis (>=7.2.0,<8.0.0)",
    "gunicorn (>=25.1.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
